@@ -1,0 +1,82 @@
+<printer id="printer/HP-PhotoSmart_D6100">
+  <make>HP</make>
+  <model>PhotoSmart D6100</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>4800</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>Refill: 1 black, 1 cyan, 1 magenta, 1 yellow, 1 light cyan, 1 light magenta</en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>www.hp.com</url>
+  <lang>
+    <pcl level="3"/><!--no pjl-->
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+    <general>
+          <manufacturer>hp</manufacturer>
+      <model>Photosmart D6100 series</model>
+      <description>HP Photosmart D6100</description>
+      <commandset>MLC,PCL,PML,DW-PCL,DYN,DESKJET,CLS</commandset>
+    </general>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>hpijs</driver>
+  <!--verified--><!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    It has ports on the side for inserting SmartMedia, CompactFlash,
+    IBM Microdrive, SD, or Sony Memory Stick digital &quot;film&quot; and
+    has a color LCD panel which displays your photos (as a digital
+    camera does) so that you can select pictures to print easily. This
+    way one can use the device as a digital photo lab without
+    PC.&lt;p&gt;
+
+    It has a USB port on its front side to directly connect a digital
+    camera (HP only).&lt;p&gt;
+
+    Best output quality reachable with the &quot;hpijs&quot; driver
+    (printer compatible to HP DeskJet 990C), especially the 4800-dpi
+    high resolution mode gives excellent photo quality.&lt;p&gt;
+
+    For basic printing functionality use the &lt;a href=&quot;
+    http://hplip.sf.net/&quot;&gt;HPIJS driver &lt;/a&gt;. 
+    For advanced functionality such as printer status, maintenance 
+    features, and photo card unload use the &lt;a href=&quot;
+    http://hplip.sf.net/&quot;&gt;HPLIP driver&lt;/a&gt; 
+    (which includes HPIJS). &lt;p&gt;
+
+    When used with HP&apos;s &quot;hpijs&quot; driver, this printer
+    auto-detects the paper type and ink cartridge type and does
+    appropriate dithering and colour adjustment internally, controlled
+    by the hardware. So even when GhostScript with the
+    &quot;hpijs&quot; driver only renders the image with 300 or 600
+    dpi, the higher resolutions are used for the internal
+    dithering. So if you insert photo paper, the printer will print in
+    photo quality, no paper type choice in the driver&apos;s options
+    is needed. There is also a special high resolution mode where the
+    image is rendered in 1200 dpi and interpolated to 4800x1200 dpi by
+    the hardware, without paper detection, intended for photo paper
+    only.&lt;p&gt;
+
+    This printer supports an optional duplex unit.&lt;p&gt;
+
+    The key focus of the printer is to address the competitive market with regards to individual ink supplies.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
+
+
