@@ -1,3 +1,9 @@
+2006-08-01  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/HP-PhotoSmart_D6100.xml, printer/HP-PhotoSmart_D7100.xml:
+	  Added HP PhotoSmart D6100 and D7100 (Thanks to Johm Hosszu from
+	  HP for these files).
+
 2006-07-26  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/Kyocera-FS-1016MFP.xml, driver/foo2kyo.xml,
